# duckdb

./: CMakeLists.txt
src/plugin/physical/common/: CMakeLists.txt  allocator.cpp  fsst.cpp  radix_partitioning.cpp
src/plugin/physical/common/adbc/: adbc.cpp  driver_manager.cpp
src/plugin/physical/common/adbc/nanoarrow/: allocator.cpp  metadata.cpp  schema.cpp  single_batch_array_stream.cpp
src/plugin/physical/common/arrow/: arrow_appender.cpp  arrow_converter.cpp  arrow_wrapper.cpp
src/plugin/physical/common/arrow/appender/: bool_data.cpp  struct_data.cpp  union_data.cpp
src/plugin/physical/common/file_system/: CMakeLists.txt  compressed_file_system.cpp  file_buffer.cpp  file_system.cpp  filename_pattern.cpp  gzip_file_system.cpp  hive_partitioning.cpp  http_state.cpp  local_file_system.cpp  multi_file_reader.cpp  pipe_file_system.cpp  virtual_file_system.cpp
src/plugin/physical/common/sort/: comparators.cpp  merge_sorter.cpp  partition_state.cpp  radix_sort.cpp  sort_state.cpp  sorted_block.cpp
src/plugin/physical/common/types/: CMakeLists.txt  batched_data_collection.cpp  chunk_collection.cpp  conflict_info.cpp  conflict_manager.cpp  data_chunk.cpp  hyperloglog.cpp  list_segment.cpp  string_heap.cpp
src/plugin/physical/common/types/column/: column_data_allocator.cpp  column_data_collection.cpp  column_data_collection_segment.cpp  column_data_consumer.cpp  partitioned_column_data.cpp
src/plugin/physical/common/types/row/: partitioned_tuple_data.cpp  row_data_collection.cpp  row_data_collection_scanner.cpp  row_layout.cpp  tuple_data_allocator.cpp  (+5 more)
(+1084 files in other folders)
